--- a/contiguous-bogo.cabal
+++ b/contiguous-bogo.cabal
@@ -40,6 +40,8 @@ library
     , base >= 4.10.1 && < 4.13
     , contiguous >= 0.3 && < 0.5
     , primitive >= 0.6.4 && < 0.8
+    , text >= 1.2 && < 1.3
+    , chronos
   ghc-options:
     -Wall
     -O2
